examples/gateway-api/manifests/standard/listenerset/listenerset.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: parent-gateway
spec:
  gatewayClassName: example
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchLabels:
          belongs-to: shared-gateway
  listeners:
  - name: foo
    hostname: foo.com
    protocol: HTTP
    port: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-1-ns
  labels:
    belongs-to: shared-gateway
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-2-ns
  labels:
    belongs-to: shared-gateway
---
# Following are resources not explicitely declared
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example
